<resources>
    <string name="app_name">Glitchify</string>

    <string name="preference_ffz">FrankerFaceZ</string>
    <string name="preference_ffz_emotes_enable">ffz_emotes_enable</string>
    <string name="preference_ffz_emotes_title">Enable Emotes</string>
    <string name="preference_ffz_emotes_summary">Show emotes in chat</string>

    <string name="preference_ffz_badges">FrankerFaceZ</string>
    <string name="preference_ffz_badges_enable">ffz_badges_enable</string>
    <string name="preference_ffz_badges_title">Enable Badges</string>
    <string name="preference_ffz_badges_summary">Show badges in chat</string>

    <string name="preference_ffz_mod">FrankerFaceZ</string>
    <string name="preference_ffz_mod_enable">ffz_mod_enable</string>
    <string name="preference_ffz_mod_title">Enable Custom Moderator Badges</string>
    <string name="preference_ffz_mod_summary">Show custom mod badge in channels that have one</string>


    <string name="preference_bttv">BetterTwitchTV</string>
    <string name="preference_bttv_emotes_enable">bttv_emotes_enable</string>
    <string name="preference_bttv_emotes_title">Enable Emotes</string>
    <string name="preference_bttv_emotes_summary">Show emotes in chat</string>

    <string name="preference_bttv_badges">BetterTwitchTV</string>
    <string name="preference_bttv_badges_enable">bttv_badges_enable</string>
    <string name="preference_bttv_badges_title">Enable Badges</string>
    <string name="preference_bttv_badges_summary">Show badges in chat</string>

    <string name="preference_bttv_gif_enable">disable_gif</string>
    <string name="preference_bttv_gif_title">Disable Gif Emotes</string>
    <string name="preference_bttv_gif_summary">Disable all Gif Emotes</string>

    <string name="preference_badges">Badges</string>
    <string name="preference_badge_hiding_enable">badge_hiding_enable</string>
    <string name="preference_badge_hiding_title">Badges to Hide</string>
    <string name="preference_badge_hiding_summary">List of badges separated by commas</string>

    <string name="preference_bits">Bits</string>
    <string name="preference_bits_combine_enable">bits_combine_enable</string>
    <string name="preference_bits_combine_title">Combine Bits</string>
    <string name="preference_bits_combine_summary">Combine and move bits to the end of messages</string>

    <string name="preference_chat_moderation">Chat Moderation</string>
    <string name="preference_prevent_channel_clear_enable">prevent_channel_clear</string>
    <string name="preference_prevent_channel_clear_title">Prevent Chat From Being Cleared</string>
    <string name="preference_prevent_channel_clear_summary">Prevents moderators from being able to clear chat</string>

    <string name="preference_show_deleted_messages_enable">show_deleted_messages</string>
    <string name="preference_show_deleted_messages_title">Stops Messages From Being Removed</string>
    <string name="preference_show_deleted_messages_summary">Prevents messages from being replaced with message deleted</string>

    <string name="preference_random_video">Random Video Options</string>
    <string name="preference_override_video_quality_enable">override_video_quality</string>
    <string name="preference_override_video_quality_title">Override Saved Video Quality</string>
    <string name="preference_override_video_quality_summary">Use value below instead of your last selected quality for new streams</string>

    <string name="preference_random_options">Random Options</string>
    <string name="preference_show_timestamps_enable">show_timestamps</string>
    <string name="preference_show_timestamps_title">Show timestamps in chat</string>
    <string name="preference_show_timestamps_summary">Adds a timestamp of when the message was received</string>

    <string name="preference_chat_scrollback_length_enable">chat_scrollback_length</string>
    <string name="preference_chat_scrollback_length_title">Length of Chat History</string>
    <string name="preference_chat_scrollback_length_summary">How far back you can scroll up chat</string>

    <string name="preference_color_adjust_enable">color_adjust</string>
    <string name="preference_color_adjust_title">Adjust colors to be more readable</string>
    <string name="preference_color_adjust_summary">Affects user colors in chat</string>

    <string name="preference_hide_video_ads_enable">hide_video_ads</string>
    <string name="preference_hide_video_ads_title">Experimental: Hide video player ads</string>
    <string name="preference_hide_video_ads_summary">Prevent ads from being loaded while watching vods</string>
</resources>
