<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_ffz">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_ffz_emotes_enable"
            android:summary="@string/preference_ffz_emotes_summary"
            android:title="@string/preference_ffz_emotes_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_ffz_badges_enable"
            android:summary="@string/preference_ffz_badges_summary"
            android:title="@string/preference_ffz_badges_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_ffz_mod_enable"
            android:summary="@string/preference_ffz_mod_summary"
            android:title="@string/preference_ffz_mod_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_bttv">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_bttv_emotes_enable"
            android:summary="@string/preference_bttv_emotes_summary"
            android:title="@string/preference_bttv_emotes_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_bttv_badges_enable"
            android:summary="@string/preference_bttv_badges_summary"
            android:title="@string/preference_bttv_badges_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_badges">
        <EditTextPreference
            android:defaultValue=""
            android:key="@string/preference_badge_hiding_enable"
            android:summary="@string/preference_badge_hiding_summary"
            android:title="@string/preference_badge_hiding_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_bits">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_bits_combine_enable"
            android:summary="@string/preference_bits_combine_summary"
            android:title="@string/preference_bits_combine_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_chat_moderation">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_show_deleted_messages_enable"
            android:summary="@string/preference_show_deleted_messages_summary"
            android:title="@string/preference_show_deleted_messages_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_prevent_channel_clear_enable"
            android:summary="@string/preference_prevent_channel_clear_summary"
            android:title="@string/preference_prevent_channel_clear_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_random_chat">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/preference_show_timestamps_enable"
            android:title="@string/preference_show_timestamps_title"
            android:summary="@string/preference_show_timestamps_summary" />
    </PreferenceCategory>

</PreferenceScreen>